tensor_algebra.h

//DATA KINDS:
#define R4 4     //float data kind (keep consistent with c_process.f90::tens_blck_pack/unpack)
#define R8 8     //double data kind (keep consistent with c_process.f90::tens_blck_pack/unpack)
#define C8 16    //double complex data kind (keep consistent with c_process.f90::tens_blck_pack/unpack)
// CUDA task (returned by non-blocking CUDA calling functions):
typedef struct{
 int task_error;                     //error code (<0: Task is either empty or in progress; 0: Success; >0: Error code)
 int gpu_id;                         //NVidia GPU ID on which the task was scheduled (-1 means CPU Host)
 cudaStream_t task_stream;           //CUDA stream the task went into
 cudaEvent_t task_start;             //CUDA event recorded at the beginning of the task
 cudaEvent_t task_comput;            //CUDA event recorded before the computing kernels start (all input data is on Device)
 cudaEvent_t task_output;            //CUDA event recorded when the computing kernels finish (before output to the Host)
 cudaEvent_t task_finish;            //CUDA event recorded at the end of the task (full completion)
 int scr_entry_count;                //number of additional GPU argument-buffer entries allocated by the task
 int scr_entry[MAX_SCR_ENTRY_COUNT]; //additional GPU argument-buffer entries allocated by the task
} cudaTask_t;
 int arg_buf_allocate(size_t *arg_buf_size, int *arg_max, int gpu_beg, int gpu_end);
 int arg_buf_deallocate(int gpu_beg, int gpu_end);
 int arg_buf_clean_host();
 int arg_buf_clean_gpu(int gpu_num);
 int get_blck_buf_sizes_host(size_t *blck_sizes);
 int get_blck_buf_sizes_gpu(int gpu_num, size_t *blck_sizes);
 int get_buf_entry_host(size_t bsize, char **entry_ptr, int *entry_num);
 int free_buf_entry_host(int entry_num);
 int get_buf_entry_gpu(int gpu_num, size_t bsize, char **entry_ptr, int *entry_num);
 int free_buf_entry_gpu(int gpu_num, int entry_num);
 int host_mem_alloc_pin(void **host_ptr, size_t tsize);
 int host_mem_free_pin(void *host_ptr);
 int host_mem_register(void *host_ptr, size_t tsize);
 int host_mem_unregister(void *host_ptr);
 int gpu_get_error_count();
 int gpu_get_debug_dump(int *dump);
 int gpu_set_shmem_width(int width);
 void gpu_set_transpose_algorithm(int alg);
 void gpu_set_matmult_algorithm(int alg);
 int encode_device_id(int dev_kind, int dev_num);
 int cuda_task_create(cudaTask_t **cuda_task);
 int cuda_task_clean(cudaTask_t *cuda_task);
 int cuda_task_destroy(cudaTask_t *cuda_task);
 int cuda_task_gpu_id(const cudaTask_t *cuda_task);
 int cuda_task_status(cudaTask_t *cuda_task);
 int cuda_task_complete(cudaTask_t *cuda_task);
 int cuda_task_wait(cudaTask_t *cuda_task);
 int gpu_is_mine(int gpu_num);
 int gpu_busy_least();
 int gpu_activate(int gpu_num);