mem_manager.h

 int get_buf_entry_from_address(int dev_id, const void * addr); //generic
 int mem_free_left(int dev_id, size_t * free_mem); //generic
 int mem_print_stats(int dev_id); //generic